# stabilo

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/: README.md  video.txt  video_stab.txt
docs/: usage.md
scripts/: README.md  custom.yaml  stabilize_boxes.py  stabilize_video.py  utils.py
scripts/find_thresholds/: README.md  find_threshold_models.py
scripts/find_thresholds/models/AKAZE/: model_mask_True_clahe_False.txt
scripts/find_thresholds/models/BRISK/: model_mask_False_clahe_False.txt  model_mask_False_clahe_True.txt  model_mask_True_clahe_True.txt
scripts/find_thresholds/models/KAZE/: model_mask_True_clahe_False.txt  model_mask_True_clahe_True.txt
scripts/find_thresholds/results/AKAZE/: data_FILTERED_mask_False_clahe_False.txt  data_FILTERED_mask_False_clahe_True.txt  data_FILTERED_mask_True_clahe_False.txt  data_FILTERED_mask_True_clahe_True.txt  data_RAW_mask_False_clahe_False.txt  data_RAW_mask_False_clahe_True.txt  data_RAW_mask_True_clahe_False.txt  data_RAW_mask_True_clahe_True.txt
scripts/find_thresholds/results/AKAZE/not_aggregated/: data_FILTERED_mask_False_clahe_False.txt  data_FILTERED_mask_False_clahe_True.txt  data_FILTERED_mask_True_clahe_False.txt  data_FILTERED_mask_True_clahe_True.txt  data_RAW_mask_False_clahe_False.txt  data_RAW_mask_False_clahe_True.txt  data_RAW_mask_True_clahe_False.txt  data_RAW_mask_True_clahe_True.txt
scripts/find_thresholds/results/BRISK/: data_FILTERED_mask_False_clahe_False.txt  data_FILTERED_mask_False_clahe_True.txt  data_FILTERED_mask_True_clahe_False.txt  data_FILTERED_mask_True_clahe_True.txt  data_RAW_mask_False_clahe_False.txt  data_RAW_mask_False_clahe_True.txt  data_RAW_mask_True_clahe_False.txt  data_RAW_mask_True_clahe_True.txt
scripts/find_thresholds/results/BRISK/not_aggregated/: data_FILTERED_mask_False_clahe_False.txt  data_FILTERED_mask_False_clahe_True.txt  data_FILTERED_mask_True_clahe_False.txt  data_FILTERED_mask_True_clahe_True.txt  data_RAW_mask_False_clahe_False.txt  data_RAW_mask_False_clahe_True.txt  data_RAW_mask_True_clahe_False.txt  data_RAW_mask_True_clahe_True.txt
scripts/find_thresholds/results/KAZE/: data_FILTERED_mask_False_clahe_False.txt  data_FILTERED_mask_False_clahe_True.txt  data_FILTERED_mask_True_clahe_False.txt  data_FILTERED_mask_True_clahe_True.txt  data_RAW_mask_False_clahe_False.txt  data_RAW_mask_False_clahe_True.txt  data_RAW_mask_True_clahe_False.txt  data_RAW_mask_True_clahe_True.txt
scripts/find_thresholds/results/KAZE/not_aggregated/: data_FILTERED_mask_False_clahe_False.txt  data_FILTERED_mask_False_clahe_True.txt  data_FILTERED_mask_True_clahe_False.txt  data_FILTERED_mask_True_clahe_True.txt  data_RAW_mask_False_clahe_False.txt  data_RAW_mask_False_clahe_True.txt  data_RAW_mask_True_clahe_False.txt  data_RAW_mask_True_clahe_True.txt
stabilo/: __init__.py  stabilo.py  utils.py
stabilo/cfg/: default.yaml
stabilo/thresholds/models/AKAZE/: model_mask_False_clahe_False.txt  model_mask_False_clahe_True.txt  model_mask_True_clahe_True.txt
stabilo/thresholds/models/BRISK/: model_mask_True_clahe_False.txt
stabilo/thresholds/models/KAZE/: model_mask_False_clahe_False.txt  model_mask_False_clahe_True.txt
tests/: IMAGE_ATTRIBUTION.md  test_phase2_traceable.py  test_stabilizer.py  test_utils.py
